[tool.poetry]
name = "Anomaly Dedection"
version = "0.1.0"
description = "Anomaly Dedection"
authors = ["Alpay Abbaszade <abbaszadealpay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
pyod = "1.1.2"
fastapi = "^0.108.0"
category-encoders = "^2.6.3"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"
tqdm = "^4.66.1"
pydantic = "^2.5.3"
joblib = "^1.3.2"
indexed-gzip = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
